reformated the follow recs section to render component by mapping through object instead of writing the component multiple times

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -2135,7 +2135,7 @@ button:hover {
 		margin-bottom: 16px;
 		border: 1px solid $sub-theme-color;
 		box-sizing: border-box;
-		height: 233.109px;
+		height: fit-content
 	}
 
 	&_cards_header {
