completed conversion of tweetStatsIcon + turned object into function in order to keep rgb codes locally accessible

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1542,6 +1542,13 @@ button:hover {
 			fill: inherit;
 		}
 
+		&_icons-wrapper{
+			background-color: none;
+			border-radius: 50%;
+			margin: none;
+			padding: none;
+		}
+
 		&_values {
 			font-size: 13px;
 			height: 20px;
