--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/scss/navigation/_navigation.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/scss/navigation/_navigation.scss
@@ -1,4 +1,5 @@
 @use "../variables";
+@use "../mixins";
 
 .navigation {
 	z-index: 3;
@@ -79,5 +80,279 @@
 		width: 275px;
 		align-items: end;
 		padding: 0;
+	}
+}
+.nav {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+
+	@media only screen and (width>=500px) and (height>=500px) {
+		display: flex;
+		min-height: max-content;
+		max-height: max-content;
+		height: max-content;
+		flex: 1 0 auto;
+		flex-direction: column;
+		align-items: center;
+		justify-content: start;
+		margin: 0;
+		z-index: 0;
+		overflow-y: visible;
+	}
+	@media only screen and (width>=600px) {
+		box-sizing: border-box;
+		width: 88px;
+		padding: 0 8px;
+	}
+
+	@media only screen and (width>=688px) {
+		padding: 0;
+		width: 72px;
+	}
+
+	@media only screen and (width>=988px) {
+		width: 60px;
+		height: unset;
+		padding: 0 4px;
+		flex: 1 0 auto;
+		box-sizing: content-box;
+	}
+
+	@media screen and (width>=1008px) {
+		width: 88px;
+		padding: 0 8px;
+		box-sizing: border-box;
+	}
+	@media screen and (width>=1025px) {
+		width: 88px;
+	}
+
+	@media screen and (width>=1265px) {
+		width: 275px;
+		max-width: 275px;
+		padding: 0 8px;
+	}
+
+	&_twitter-logo-box {
+		display: none;
+
+		@media only screen and (width>=500px) and (height>=500px) {
+			width: 60px;
+			height: 56px;
+			min-height: 56px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin: 0;
+			padding: 2px 0;
+			box-sizing: border-box;
+		}
+
+		@media screen and (width>=600px) {
+			width: 100%;
+			//justify-content: start;
+		}
+
+		@media only screen and (width>=1265px) {
+			justify-content: start;
+		}
+
+		&_hover-wrapper {
+			@include mixins.hover-bg(50%);
+			@include mixins.active-bg(50%);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			aspect-ratio: 1/1;
+
+			@media only screen and (width>=500px) {
+				//justify-content: start;
+				max-width: 52px;
+			}
+		}
+	}
+
+	&_twitter-logo {
+		display: flex;
+
+		@media only screen and (width>=500px) {
+			width: 50px;
+			height: 30px;
+			//border-radius: 50%;
+			padding: 0;
+			margin: 0;
+			fill: rgb(0, 0, 0);
+		}
+
+		@media only screen and (width>=500px) {
+			//width: fit-content;
+		}
+
+		@media screen and (width>=1265px) {
+			justify-content: center;
+			//padding-left: 11px;
+		}
+	}
+
+	&_ul {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: end;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		height: 100%;
+		max-height: 100%;
+		width: 100%;
+
+		@media only screen and (width>=500px) and (height>=500px) {
+			width: 60px;
+			height: max-content;
+			flex-direction: column;
+			align-items: center;
+			justify-content: start;
+			margin: 2px 0 4px 0;
+			overflow-y: visible;
+			flex: 1 0 auto;
+		}
+
+		@media screen and (width>=500px) and (height>=615px) {
+			//min-height: 502.5px;
+		}
+
+		@media only screen and (width>=600px) {
+			width: 100%;
+		}
+	}
+
+	&_li {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+
+		@media only screen and (width>=500px) {
+			height: 50.25px;
+			@media screen and (height>=855px) {
+				padding: 4px 0px;
+			}
+		}
+
+		@media only screen and (width>=688px) {
+			margin: 0 0;
+		}
+
+		@media only screen and (width>=1265px) {
+			padding: 4px 0;
+			border-radius: 99px;
+		}
+	}
+
+	&_li--first-item {
+		@extend .nav_li;
+
+		@media only screen and (width>=500px) {
+			/* margin-top: 0; */
+			/* .nav_text:focus {
+				font-family: chirp;
+				font-weight: bold;
+			} */
+			@media screen and (height>=855px) {
+				padding: 4px 0px;
+			}
+		}
+	}
+
+	&_li--search-icon {
+		@extend .nav_li;
+		@media screen and (width>=500px) and (height>=855px) {
+			padding: 4px 0px;
+		}
+	}
+
+	&_li--hashtag-icon {
+		@extend .nav_li;
+		display: none;
+	}
+
+	&_a {
+		display: flex;
+		justify-content: start;
+		align-items: center;
+		text-decoration: none;
+		//border:solid blue;
+
+		@media screen and (width>=1265px) {
+			box-sizing: border-box;
+			width: 100%;
+			height: 120%;
+			justify-content: flex-start;
+			padding: 5px 0;
+		}
+	}
+
+	&_a:focus {
+		.nav_text {
+			font-family: chirp;
+			font-weight: bold;
+		}
+	}
+
+	&_hover-wrapper {
+		@include mixins.active-bg(50%);
+		display: flex;
+		width: max-content;
+		aspect-ratio: 1/1;
+		/* height: 100%;
+		max-height: 100%; */
+		align-items: center;
+
+		@media screen and (width>=500px) {
+			/*  */
+			height: 100%;
+			padding: 4px;
+		}
+
+		@media screen and (width>=1265px) {
+			/*  */
+			@include mixins.hover-bg(9999px);
+			aspect-ratio: unset;
+			padding: 0 28px 0 12px;
+		}
+	}
+
+	&_nav-icons {
+		width: 26.25px;
+		height: 26.25px;
+		border-radius: 50%;
+		padding: /* 12px */ 8px;
+		overflow: visible;
+		@media screen and (width>=1265px) {
+			padding: 0;
+			margin-right: 20px;
+		}
+	}
+
+	&_text {
+		display: none;
+
+		@media screen and (width>=1265px) {
+			display: flex;
+			align-items: end;
+			font-size: 20px;
+			color: black;
+			height: 24px;
+		}
+	}
+
+	&_text-focused {
+		@extend .nav_text;
+		font-weight: bold;
 	}
 }
